--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,32 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
+<nav>
+  <ul class="nav navbar-nav">
+  	<!-- <ul class="nav">
+		
+	</ul> -->
+    <!-- <li><a href="#">Home</a></li>
+    <li><a href="#">Help</a></li>
+    <li><a href="#">Log in</a></li> -->
+  </ul>
+</nav>
+
 <body>
+<!-- <ul class="nav">
+  <li class="active"><a href="/ideas">Ideas</a></li>
+</ul> -->
+
+<p class="navbar-text pull-right">
+<% if user_signed_in? %>
+  Logged in as <strong><%= current_user.email %></strong>.
+  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+<% else %>
+  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+<% end %>
 
 <% if notice %>
   <p class="alert alert-success"><%= notice %></p>
